[gd_scene load_steps=3 format=2]

[ext_resource path="res://source/ui/subcomponents/window/Window.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/ui/buttons/Buttons.gd" type="Script" id=2]

[node name="Buttons" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="VBoxContainer" parent="." index="0"]
margin_right = 66.0
margin_bottom = 38.0

[node name="TopBar" parent="VBoxContainer" index="0"]
visible = false

[node name="ContentPanel" parent="VBoxContainer" index="1"]
margin_top = 0.0
margin_right = 66.0
margin_bottom = 38.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ContentPanel" index="0"]
margin_left = 7.0
margin_top = 7.0
margin_right = 59.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Equipment" type="Button" parent="VBoxContainer/ContentPanel/GridContainer" index="0"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "E"

[node name="Inventory" type="Button" parent="VBoxContainer/ContentPanel/GridContainer" index="1"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "I"

[node name="PanelDrag" parent="." index="1"]
visible = false
margin_right = 66.0
margin_bottom = 38.0

[node name="Label" parent="PanelDrag/CenterContainer" index="0"]
margin_left = 0.0
margin_top = 9.0
margin_right = 74.0
margin_bottom = 28.0

[connection signal="pressed" from="VBoxContainer/ContentPanel/GridContainer/Equipment" to="." method="_on_Equipment_pressed"]
[connection signal="pressed" from="VBoxContainer/ContentPanel/GridContainer/Inventory" to="." method="_on_Inventory_pressed"]
